# PLang

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  annotated.html  annotated_dup.js  base_8hpp.html  base_8hpp.js  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp__incl.md5  base_8hpp_source.html  causal_8hpp.html  causal_8hpp__dep__incl.map  causal_8hpp__dep__incl.md5  causal_8hpp_source.html  classes.html  classplang_1_1cli-members.html  classplang_1_1cli.html  classplang_1_1cli.js  classplang_1_1corpus-members.html  classplang_1_1corpus.html  classplang_1_1corpus.js  classplang_1_1corpus_1_1report-members.html  classplang_1_1corpus_1_1report.html  classplang_1_1corpus_1_1report.js  classplang_1_1corpus__inherit__graph.map  classplang_1_1corpus__inherit__graph.md5  classplang_1_1detail_1_1base__types_1_1decorated-members.html  classplang_1_1detail_1_1base__types_1_1decorated.html  classplang_1_1detail_1_1base__types_1_1decorated.js  classplang_1_1detail_1_1base__types_1_1decorated__inherit__graph.map  classplang_1_1detail_1_1base__types_1_1decorated__inherit__graph.md5  classplang_1_1detail_1_1base__types_1_1persisted-members.html  classplang_1_1detail_1_1base__types_1_1persisted.html  (+579 more)
cmake/: ResourceCompiler.cmake
corpus/: std.en.plang
docs/: Doxyfile  DoxygenLayout.xml  header.html
include/plang/: base.hpp  corpus.hpp  error.hpp  lang.hpp  plang.hpp  plot.hpp
include/plang/corpus/: detail.hpp  path.hpp  plot.hpp
include/plang/corpus/plot/: causal.hpp  object.hpp  object_class.hpp  point.hpp  point_class.hpp  symbol.hpp  symbol_class.hpp
include/plangcli/: cli.hpp  error.hpp  intl.hpp
lang/: Plang.g4  plang.g4
lib/plang/: CMakeLists.txt
lib/plang/include/: db.hpp  parser_namespace.hpp  sqlite.hpp  version.hpp
lib/plang/include/lang/: forms.hpp  visitor.hpp
lib/plang/res/sql/ddl/: base.sql  pragma.sql
lib/plang/res/sql/ddl/plot/: causal.sql  object.sql  point.sql  symbol.sql
lib/plang/src/: base.cpp  corpus.cpp  error.cpp  plot.cpp  test.cpp
lib/plang/src/corpus/: detail.cpp  path.cpp
lib/plang/src/corpus/plot/: object.cpp  object_class.cpp  point.cpp  point_class.cpp  symbol.cpp  symbol_class.cpp
lib/plang/src/data/: db.cpp  regexp.c  sqlite_undo.c
lib/plang/src/lang/: context_visitor.cpp  hint_visitor.cpp  object_visitor.cpp  path_visitor.cpp  point_visitor.cpp  symbol_visitor.cpp  visitor.cpp  visitor_impl.cpp
lib/plang/test/: valid.plang
lib/plang/test/include/: helper.hpp
lib/plang/test/src/corpus/plot/: object_class.cpp  point_class.cpp  symbol.cpp  symbol_class.cpp
lib/plang/test/src/corpus/root/: path.cpp
lib/plangcli/: CMakeLists.txt
lib/plangcli/cmake/: FindReadline.cmake
lib/plangcli/src/: cli.cpp  error.cpp  intl.cpp  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+96 more)
src/plang/: __init__.py  __main__.py  dependencies.py  error.py  locale.py  main.py
src/plang/cli/: cli.py  handler.py  scope.py
src/plang/db/: __init__.py  base.py  models.py  visual.py
src/plang/db/plot/: __init__.py
src/plang/db/plot/causal/: __init__.py  models.py
src/plang/db/plot/object/: __init__.py  models.py
src/plang/db/plot/point/: __init__.py  models.py
src/plang/db/plot/symbol/: __init__.py  models.py
src/plang/lang/logic/: manager.py
src/plang/lang/parser/: __init__.py  completion.py  visitor.py
src/sql/: all_qualified_paths.sql
test/corpus/: valid.plang
test/plang/db/: main.py
test/plang_test/: __main__.py  util.py
test/plang_test/lang/: test_path.py
test/plang_test/lang/plot/point/: test_point_class.py
test/plang_test/lang/plot/symbol/: test_symbol.py  test_symbol_class.py
